# pomiary

./: README.md  common.py  configure_builds.py  d32.py  d64.py  qt481msvc2010env.bat  r32.py  r64.py
repo/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MyWidget.cpp  MyWidget.h  main.cpp
